Prepare Alpha 61 test release
